feat: delete or edit a specific experience when click edit or delete button

--- a/src/App.css
+++ b/src/App.css
@@ -45,5 +45,12 @@ dialog {
   margin: 5px; 
   font-weight: bold;
 }
+.doNotPrint {
+  overflow: auto;
+  max-height: 500px;
+}
+form{
+  margin-bottom: 20px;
+}
 
   
